birdfont (0.10) stable;

  * Bugfixes
  * Move paths with keyboard
  * Backup and crash recovery

 -- Johan Mattsson <johan.mattsson.m@gmail.com>  Sun Jan 27 20:38:32 CET 2013

birdfont (0.9) stable;

  * Color
  * Adjustable control point size
  * Select all path
  * Resize all selected paths
  * Import SVG files from Inkscape and Adobe Illustrator
  * Move control points with keyboard
  * Bugfixes
  * Join paths
  * German translation
  * Chinese translation

Coding for the release was done by Zhantong Zhang and Johan Mattsson. 
Translation was done by Zhantong Zhang, Robert Kabinger, Marc-Philipp 
Beuter and DiGro.

 -- Johan Mattsson <johan.mattsson.m@gmail.com>  Sat Jan 26 13:57:48 CET 2013

birdfont (0.8) stable;

  * Copy and paste paths from inkscape
  * Export SVG files
  * New build system on top of Eduardo Schettinos doit
  * Dutch translation by Sven Santegoeds

 -- Johan Mattsson <johan.mattsson.m@gmail.com>  Wed Dec 26 23:00:43 CET 2012

birdfont (0.7) stable;

  * New icons
  * Bugfixes
  * Menu
  * Internationalization

 -- Johan Mattsson <johan.mattsson.m@gmail.com>  Sat Dec  8 14:40:08 CET 2012

birdfont (0.6) stable;

  * Improved TrueType outlines
  * Resize paths
  * Bugfixes

 -- Johan Mattsson <johan.mattsson.m@gmail.com>  Sun Oct 28 18:38:35 CET 2012

birdfont (0.5) stable;

  * Move multiple control points 
  * Draw path from both ends
  * New edit commands
  * Man pages

 -- Johan Mattsson <johan.mattsson.m@gmail.com>  Sat Oct 20 19:52:27 CEST 2012

birdfont (0.4.1) stable;

  * Edit filled paths
  * Bugfixes

 -- Johan Mattsson <johan.mattsson.m@gmail.com>  Wed Sep 19 15:37:40 CEST 2012

birdfont (0.4.0) stable;

  * Larger control points
  * Crop background updates position of the image
  * Undo command for background images
  * Faster multithreaded export
  * Juxtapose glyphs and draw every glyph in it's context
  * New notdef. character
  * New tab bar

 -- Johan Mattsson <johan.mattsson.m@gmail.com>  Fri Sep 14 13:11:13 CEST 2012
