@@ -1,3 +1,9 @@
+birdfont (0.11) stable;
+
+  * Bugfixes
+
+ -- Johan Mattsson <johan.mattsson.m@gmail.com>  Wed Jan 30 09:25:10 CET 2013
+
 birdfont (0.10) stable;
 
   * Bugfixes
